--- a/package.json
+++ b/package.json
@@ -1,25 +1,20 @@
 {
-  "name": "create-react-library",
-  "version": "2.0",
-  "description": "React NPM library starter kit based on Facebook's create react app",
+  "name": "@simon-siefke/react-toggle-component",
+  "version": "0.0.1",
+  "description": "A toggle component for react",
   "main": "build/index.js",
   "scripts": {
-    "start": "node scripts/start.js",
+    "dev": "node scripts/start.js",
     "build": "node scripts/build.js",
     "demo": "node scripts/demo.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "deploy": "npm run build && npm publish --access public"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/DimiMikadze/create-react-library.git"
-  },
-  "author": "Dimi Mikadze <dimi@udilia.com>",
-  "bugs": {
-    "url": "https://github.com/DimiMikadze/create-react-library/issues"
-  },
-  "homepage": "https://github.com/DimiMikadze/create-react-library#readme",
+  "author": "Simon Siefke <simon.siefke@gmail.com>",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "react-use-toggle": "0.0.0-alpha.1"
+  },
   "devDependencies": {
     "@babel/core": "7.1.0",
     "@svgr/webpack": "2.4.1",
@@ -57,10 +52,10 @@
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.0.6",
     "postcss-safe-parser": "4.0.1",
-    "react": "^16.6.3",
+    "react": "^16.7.0-alpha.0",
     "react-app-polyfill": "^0.1.3",
     "react-dev-utils": "^6.1.1",
-    "react-dom": "^16.6.3",
+    "react-dom": "^16.7.0-alpha.0",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
